chore: user integration tests working
